--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Srilaxmi Kumba — Portfolio</title>
-    <meta name="description" content="Portfolio of Srilaxmi Kumba — B.Tech graduate, Java & React developer based in Hyderabad." />
+
+    <title>Srilaxmi Kumba — Software Developer Portfolio</title>
+
+    <meta
+      name="description"
+      content="Portfolio of Srilaxmi Kumba — B.Tech graduate, Java & React developer based in Hyderabad."
+    />
     <meta name="author" content="Srilaxmi Kumba" />
 
+    <!-- Open Graph (LinkedIn, WhatsApp, Facebook) -->
     <meta property="og:title" content="Srilaxmi Kumba — Portfolio" />
-    <meta property="og:description" content="Portfolio of Srilaxmi Kumba — B.Tech graduate, Java & React developer based in Hyderabad." />
+    <meta
+      property="og:description"
+      content="Java & React developer showcasing projects, skills, and experience."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://yourdomain.com/og-image.png" />
+    <meta property="og:url" content="https://yourdomain.com" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Srilaxmi Kumba — Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Java & React developer showcasing projects and skills."
+    />
+    <meta name="twitter:image" content="https://yourdomain.com/og-image.png" />
   </head>
 
   <body>
@@ -23,3 +37,4 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
